# checkmk-weblate-syncer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
checkmk_weblate_syncer/: __init__.py  __main__.py  cli.py  config.py  git.py  html_tags.py  logging.py  po.py  portable_object.py  pot.py  update_sources.py  update_translations.py
src/checkmk_weblate_syncer/: __main__.py  config.py  git.py  html_tags.py  logger.py  logging.py  portable_object.py  update_sources.py  update_translations.py
tests/: test_html_tags.py  test_po.py  test_portable_object.py  test_pot.py  test_update_sources.py  test_update_translations.py
