[project]
name = "checkmk-weblate-syncer"
version = "0.2.0"
description = "Synchronization between the Checkmk source repository and Weblate"
readme = "README.md"
authors = [
    { name = "Jörg Herbel", email = "joerg.herbel@checkmk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "pydantic>=2.10.5",
]

[project.scripts]
checkmk-weblate-syncer = "checkmk_weblate_syncer:__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.mypy]
strict = true
